2010-05-02  Rik <octave@nomad.inbox5.com>

	* linear-algebra/cond.m: Add TeX equation to documentation

2010-05-02  Peter van den Biggelaar <peter@biglr.net>

	* plot/close.m: No error on "close([])".

2010-05-01  Ben Abbott <bpabbott@mac.com>

	* plot/__go_draw_axes__.m: Remove gnuplot errorbar code.

2010-04-30  Ben Abbott <bpabbott@mac.com>

	* plot/loglogerr.m, plot/semilogxerr.m, plot/semilogyerr.m:
	Add demos.
	* plot/private/__errplot__.m: Fix bug parsing errorbar style.
	* plot/private/__errplot__.m: Implement errorbars in the Matlab style.

2010-04-29  Ben Abbott <bpabbott@mac.com>

	* plot/errorbar.m: Modify demo.
	* plot/private/__errplot__.m: Fix bug for boxxy errorbar.
	* plot/errorbar.m: Add demos.

2010-04-27  David Bateman  <dbateman@free.fr>

	* plot/private/__errplot__.m: Update the marker in a seperate
	listener function.

2010-04-27  Rik <octave@nomad.inbox5.com>

	* plot/private/__go_draw_axes__.m: Use "." for marker when plotting
	with errorbars.  (bug #29057)

2010-04-27  Ben Abbott <bpabbott@mac.com>

	* plot/private/__errplot__.m: Add missing semicolon line terminations.

2010-04-27  David Bateman  <dbateman@free.fr>

	* plot/private/__default_plot_options_.m: New option errorstyle.
	* plot/private/__pltopt__.m: Use errorstyle here seperately from
	the linestyle so that both can be set.
	* plot/private/__errcomm__.m: Allow for the fact that matrices
	to __errplot__ with return a vector of handles.
	* plot/private/__errplot__.m: Allow for default linestyles.

	* plot/private/__errplot__.m: Set the errorbar marker to "none".

2010-04-26  David Bateman  <dbateman@free.fr>

	* plot/bar.m: Document the use of the colormap for the color of
	the bars.

	* plot/private/__errplot__.m: Allow x, box and xy errorbars with
	different syntax.

	* plot/private/__errplot__.m: Allow matlab style linestyles, and
	support setting the markers.

2010-04-24  David Bateman  <dbateman@free.fr>

	* plot/private/__patch__.m: Correct order of calling setdata and